--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.6",
     "express": "^4.16.2",
-    "mongodb": "^2.2.33"
+    "mongodb": "^2.2.33",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "request": "^2.81.0",
