--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^2.5.6",
     "express": "^4.16.2",
     "mongodb": "^2.2.33",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "pdfkit": "^0.11.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
